--- a/src/sdg/scss/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/scss/components/DropdownList/_dropdownList.scss
@@ -44,6 +44,10 @@ $border: 1;
   transform: rotate(180deg);
 }
 
+.qc-dropdown-placeholder {
+  align-items: start;
+}
+
 .qc-dropdown-list-items {
   position: absolute;
   max-height: rem($max-height - $min-height);
@@ -54,8 +58,6 @@ $border: 1;
   z-index: 11; // Index supérieur à l'index du mixin qc-formcontrol-box
   overflow-y: auto;
   overflow-x: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
 
   background-color: token-value(color, background);
   border-left: rem($border) solid token-value(color, grey, medium);
