--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2167,6 +2167,23 @@ qc-search-bar {
   --error-icon-height: 2.1rem!important;
 }
 
+.qc-label {
+  font-weight: var(--qc-font-weight-content-medium);
+  display: block;
+}
+.qc-label .qc-label-required {
+  font-size: var(--qc-font-size-md);
+  line-height: var(--qc-line-height-md);
+  font-weight: var(--qc-font-weight-bold);
+  color: var(--qc-color-red-regular);
+}
+.qc-label.qc-label-compact {
+  font-size: var(--qc-font-size-sm);
+}
+.qc-label.qc-label-disabled {
+  color: var(--qc-color-grey-regular);
+}
+
 .qc-container,
 .qc-container-fluid,
 .qc-container-lg,
