--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2402,7 +2402,6 @@ input[type=checkbox]:checked.qc-compact::after {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
-  color: var(--qc-color-grey-medium);
 }
 .qc-dropdown-button::before {
   position: absolute;
@@ -2433,7 +2432,11 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 
 .qc-dropdown-placeholder {
-  align-items: start;
+  color: var(--qc-color-grey-medium);
+}
+
+.qc-dropdown-choice {
+  color: var(--qc-color-blue-dark);
 }
 
 .qc-dropdown-list-items {
@@ -2473,7 +2476,7 @@ input[type=checkbox]:checked.qc-compact::after {
   align-items: center;
   height: 4rem;
 }
-.qc-dropdown-list-multiple:hover, .qc-dropdown-list-multiple:focus, .qc-dropdown-list-single:hover, .qc-dropdown-list-single:focus {
+.qc-dropdown-list-multiple:hover, .qc-dropdown-list-multiple:focus, .qc-dropdown-list-multiple:has(input[type=checkbox]:focus), .qc-dropdown-list-single:hover, .qc-dropdown-list-single:focus, .qc-dropdown-list-single:has(input[type=checkbox]:focus) {
   background-color: var(--qc-color-blue-pale);
   outline: none;
   cursor: pointer;
