--- a/src/sdg/scss/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/scss/components/DropdownList/_dropdownList.scss
@@ -26,7 +26,6 @@ $border: 1;
 
   @include qc-formcontrol-box();
   @include content-font(md);
-  color: token-value(color, grey, medium);
 
   &:hover {
     cursor: pointer;
@@ -44,7 +43,11 @@ $border: 1;
 }
 
 .qc-dropdown-placeholder {
-  align-items: start;
+  color: token-value(color, grey, medium);
+}
+
+.qc-dropdown-choice {
+  color: token-value(color, blue, dark);
 }
 
 .qc-dropdown-list-items {
@@ -89,7 +92,7 @@ $border: 1;
   align-items: center;
   height: rem($min-height);
 
-  &:hover, &:focus {
+  &:hover, &:focus, &:has(input[type=checkbox]:focus) {
     background-color: token-value(color, blue, pale);
     outline: none;
     cursor: pointer;
