--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -13,6 +13,7 @@
 @use "../bases/shadings/shadings";
 @use "utilities/display";
 @use "utilities/themes";
+@use "utilities/states";
 @use "../components/Icon/icons";
 @use "../components/Notice/notice";
 @use "../components/PivHeader/pivHeader";
