--- a/src/sdg/scss/qc-sgd-no-grid.scss
+++ b/src/sdg/scss/qc-sgd-no-grid.scss
@@ -27,4 +27,4 @@
 @use "../components/FormError/formError";
 @use "../components/ToggleSwitch/toggleSwitch";
 @use "../components/Label/label";
-@use "components/DropdownList/dropdownList";
+@use "../components/DropdownList/dropdownList";
