Suppression de code inutile. Petite correction dans textfield.html

--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -112,7 +112,7 @@
     </tr>
     <tr>
       <td>size</td>
-      <td>"sm", "md", "lg", "xl", "xxl", "xl", "xxl"</td>
+      <td>"sm", "md", "lg", "xl", "xxl"</td>
       <td>"xl"</td>
       <td>Taille du champ</td>
     </tr>
