--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2395,6 +2395,11 @@ input[type=checkbox]:checked.qc-compact::after {
   z-index: 12 !important;
 }
 
+.qc-dropdown-list-no-options {
+  margin-left: var(--qc-spacer-xs);
+  margin-right: var(--qc-spacer-xs);
+}
+
 .qc-dropdown-button {
   display: flex;
   width: 100%;
@@ -2449,20 +2454,27 @@ input[type=checkbox]:checked.qc-compact::after {
   color: var(--qc-color-blue-dark);
 }
 
-.qc-dropdown-list-items {
+.qc-dropdown-list-expanded {
   position: absolute;
-  max-height: 33rem;
   width: calc(100% + 2px);
   left: -0.1rem;
   right: -0.1rem;
   top: 100%;
   z-index: 11;
-  overflow-y: auto;
-  overflow-x: hidden;
   background-color: var(--qc-color-background);
   border-left: 0.1rem solid var(--qc-color-grey-medium);
   border-right: 0.1rem solid var(--qc-color-grey-medium);
   border-bottom: 0.1rem solid var(--qc-color-grey-medium);
+}
+
+.qc-dropdown-list-hidden {
+  display: none;
+}
+
+.qc-dropdown-list-items {
+  max-height: var(--dropdown-items-height);
+  overflow-y: auto;
+  overflow-x: hidden;
   scrollbar-color: var(--qc-color-blue-regular) var(--qc-color-background);
 }
 .qc-dropdown-list-items::-webkit-scrollbar-track {
@@ -2475,10 +2487,6 @@ input[type=checkbox]:checked.qc-compact::after {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-}
-
-.qc-dropdown-list-items-hidden {
-  display: none;
 }
 
 .qc-dropdown-list-multiple, .qc-dropdown-list-single {
