Fix de l'espacement entre le champ et le message d'erreur

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2268,3 +2268,7 @@ qc-textfield {
   --error-icon-width: 2.4rem!important;
   --error-icon-height: 2.1rem!important;
 }
+
+.qc-textfield-container .qc-form-error {
+  margin-top: var(--qc-spacer-xs);
+}
