--- a/src/sdg/components/FormError/_formError.scss
+++ b/src/sdg/components/FormError/_formError.scss
@@ -14,3 +14,9 @@
       --error-icon-height: #{rem(21)}!important;
   }
 }
+
+.qc-textfield-container {
+  .qc-form-error {
+    margin-top: token-value(spacer, xs);
+  }
+}
