Fix de l'espacement entre le champ et le message d'erreur

--- a/src/sdg/components/FormError/_formError.scss
+++ b/src/sdg/components/FormError/_formError.scss
@@ -13,3 +13,9 @@
       --error-icon-height: #{rem(21)}!important;
   }
 }
+
+.qc-textfield-container {
+  .qc-form-error {
+    margin-top: token-value(spacer, xs);
+  }
+}
