--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -1,3 +1,8 @@
+<h2 id="textfield">Champ texte</h2>
+
+<p>Le champ texte est un espace dans lequel est saisie une information qui tient sur une ou plusieurs lignes de texte.
+  Il peut s’agir d’une combinaison de lettres, de chiffres et de symboles.</p>
+
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
   <form id="formulaire-champs-textes">
     <qc-textfield
