Correction de bugs d'id dans la doc de boutons de selection

--- a/src/sdg/components/CheckFieldGroup/_selectionButtons.html
+++ b/src/sdg/components/CheckFieldGroup/_selectionButtons.html
@@ -36,9 +36,18 @@
         <qc-checkbox
                 label="Option 1"
                 description="Ceci est une <b>longue</b> description servant à montrer l'affichage des boutons de sélection."
+                value="1"
         ></qc-checkbox>
-        <qc-checkbox label="Option 2 cochée par défaut" checked="true"></qc-checkbox>
-        <qc-checkbox label="Option 3 désactivée" disabled="true"></qc-checkbox>
+        <qc-checkbox
+                label="Option 2 cochée par défaut"
+                checked="true"
+                value="2"
+        ></qc-checkbox>
+        <qc-checkbox
+                label="Option 3 désactivée"
+                disabled="true"
+                value="3"
+        ></qc-checkbox>
     </qc-checkbox-group>
 </qc-doc-exemple>
 
