--- a/src/sdg/components/Checkbox/_checkbox.html
+++ b/src/sdg/components/Checkbox/_checkbox.html
@@ -132,7 +132,7 @@
 </qc-doc-exemple>
 
 
-<h3>Documentation technique</h3>
+<h3 id="checkbox-attributes">Documentation technique</h3>
 
 <h4>Attributs de qc-checkbox</h4>
 <div class="table-overflow">
