--- a/src/sdg/components/TextField/_textField.html
+++ b/src/sdg/components/TextField/_textField.html
@@ -4,7 +4,11 @@
   Il peut s’agir d’une combinaison de lettres, de chiffres et de symboles.</p>
 
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
-  <form id="formulaire-champs-textes">
+  <form id="formulaire-champs-textes"
+        style="display: flex;
+               flex-direction: column;
+               gap: 3.2rem;"
+  >
     <qc-textfield
             name="text-sm"
             label="Entrez votre âge"
