--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2621,10 +2621,14 @@ qc-textfield {
   align-items: center;
   height: 4rem;
 }
-.qc-dropdown-list-multiple:hover, .qc-dropdown-list-multiple:focus, .qc-dropdown-list-multiple:has(input[type=checkbox]:focus), .qc-dropdown-list-single:hover, .qc-dropdown-list-single:focus, .qc-dropdown-list-single:has(input[type=checkbox]:focus) {
+.qc-dropdown-list-multiple:hover, .qc-dropdown-list-single:hover {
   background-color: var(--qc-color-blue-pale);
   outline: none;
   cursor: pointer;
+}
+.qc-dropdown-list-multiple:focus, .qc-dropdown-list-multiple:has(input[type=checkbox]:focus), .qc-dropdown-list-single:focus, .qc-dropdown-list-single:has(input[type=checkbox]:focus) {
+  outline: 0.2rem solid var(--qc-color-blue-light);
+  outline-offset: -0.2rem;
 }
 
 .qc-dropdown-list-single {
