Ajout du style `qc-label-bold` et gestion de la prop `bold` pour le composant Label

--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -2175,3 +2175,6 @@ qc-search-bar {
 .qc-label.qc-label-compact {
   font-size: var(--qc-font-size-sm);
 }
+.qc-label.qc-label-bold {
+  font-weight: var(--qc-font-weight-content-bold);
+}
