--- a/public/css/qc-sdg.css
+++ b/public/css/qc-sdg.css
@@ -2175,6 +2175,9 @@ qc-search-bar {
 .qc-label.qc-label-compact {
   font-size: var(--qc-font-size-sm);
 }
+.qc-label.qc-label-bold {
+  font-weight: var(--qc-font-weight-content-bold);
+}
 
 .qc-container,
 .qc-container-fluid,
