--- a/src/sdg/components/Label/_label.scss
+++ b/src/sdg/components/Label/_label.scss
@@ -7,4 +7,8 @@
   &.qc-label-compact {
     font-size: token-value(font size sm);
   }
+
+  &.qc-label-bold {
+    font-weight: token-value(font weight content bold);
+  }
 }
