--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -145,6 +145,10 @@
   --qc-spacer-content-block-mb: var(--qc-spacer-md);
   --qc-spacer-list-pl: var(--qc-spacer-sm);
   --qc-spacer-list-item-mb: var(--qc-spacer-sm);
+  --qc-spacer-input-sm: 6.3rem;
+  --qc-spacer-input-md: 15.6rem;
+  --qc-spacer-input-lg: 24.9rem;
+  --qc-spacer-input-xl: 52.8rem;
   --qc-grid-gutter: 32px;
   --qc-grid-breakpoint-xs: 0;
   --qc-grid-breakpoint-sm: 768px;
