--- a/src/sdg/components/DropdownList/_dropdownList.scss
+++ b/src/sdg/components/DropdownList/_dropdownList.scss
@@ -8,13 +8,16 @@ $border: 1;
 .qc-dropdown-list {
   position: relative;
   border: rem($border) solid token-value(color, grey, medium);
-  max-width: var(--dropdown-width);
   min-height: rem($min-height);
   background-color: token-value(color, background);
 
   &.qc-dropdown-list-invalid {
     border: rem(2) solid token-value(color, red, regular) !important;
   }
+
+  &--sm { max-width: token-value(spacer, input, md); }
+  &--md { max-width: token-value(spacer, input, lg); }
+  &--lg { max-width: token-value(spacer, input, xl); }
 }
 
 .qc-dropdown-list-search {
