--- a/src/sdg/scss/settings/_tokens.scss
+++ b/src/sdg/scss/settings/_tokens.scss
@@ -210,6 +210,7 @@ $lg-tokens: (
             md: rem(156),
             lg: rem(249),
             xl: rem(528),
+            xxl: rem(825)
         )
     ),
     grid: (
