--- a/public/css/qc-sdg-design-tokens.css
+++ b/public/css/qc-sdg-design-tokens.css
@@ -149,6 +149,7 @@
   --qc-spacer-input-md: 15.6rem;
   --qc-spacer-input-lg: 24.9rem;
   --qc-spacer-input-xl: 52.8rem;
+  --qc-spacer-input-xxl: 82.5rem;
   --qc-grid-gutter: 32px;
   --qc-grid-breakpoint-xs: 0;
   --qc-grid-breakpoint-sm: 768px;
