--- a/public/css/qc-sdg-no-grid.css
+++ b/public/css/qc-sdg-no-grid.css
@@ -1991,19 +1991,20 @@ qc-search-bar {
   background-color: rgba(var(--qc-color-grey-light-rgb), 0.16);
 }
 
-.qc-selection-button, .qc-check-row {
+.qc-dropdown-list-checkbox, .qc-selection-button, .qc-check-row {
   display: flex;
   align-items: start;
   margin: 0;
 }
-.qc-selection-button:not(:has(input:disabled)):hover, .qc-check-row:not(:has(input:disabled)):hover {
+.qc-dropdown-list-checkbox:not(:has(input:disabled)):hover, .qc-selection-button:not(:has(input:disabled)):hover, .qc-check-row:not(:has(input:disabled)):hover {
   cursor: pointer;
 }
-.qc-selection-button:has(input:disabled), .qc-check-row:has(input:disabled) {
+.qc-dropdown-list-checkbox:has(input:disabled), .qc-selection-button:has(input:disabled), .qc-check-row:has(input:disabled) {
   color: var(--qc-color-grey-regular);
   cursor: not-allowed;
 }
-.qc-selection-button input[type=radio], .qc-check-row input[type=radio],
+.qc-dropdown-list-checkbox input[type=radio], .qc-selection-button input[type=radio], .qc-check-row input[type=radio],
+.qc-dropdown-list-checkbox input[type=checkbox],
 .qc-selection-button input[type=checkbox],
 .qc-check-row input[type=checkbox] {
   display: flex;
@@ -2016,12 +2017,14 @@ qc-search-bar {
   border-style: solid;
   border-color: var(--qc-color-blue-dark);
 }
-.qc-selection-button input[type=radio]:not(:disabled):hover, .qc-check-row input[type=radio]:not(:disabled):hover,
+.qc-dropdown-list-checkbox input[type=radio]:not(:disabled):hover, .qc-selection-button input[type=radio]:not(:disabled):hover, .qc-check-row input[type=radio]:not(:disabled):hover,
+.qc-dropdown-list-checkbox input[type=checkbox]:not(:disabled):hover,
 .qc-selection-button input[type=checkbox]:not(:disabled):hover,
 .qc-check-row input[type=checkbox]:not(:disabled):hover {
   cursor: pointer;
 }
-.qc-selection-button input[type=radio]::before, .qc-check-row input[type=radio]::before,
+.qc-dropdown-list-checkbox input[type=radio]::before, .qc-selection-button input[type=radio]::before, .qc-check-row input[type=radio]::before,
+.qc-dropdown-list-checkbox input[type=checkbox]::before,
 .qc-selection-button input[type=checkbox]::before,
 .qc-check-row input[type=checkbox]::before {
   content: "";
@@ -2031,18 +2034,20 @@ qc-search-bar {
   overflow: hidden;
   opacity: 0;
 }
-.qc-selection-button input[type=radio]:checked, .qc-check-row input[type=radio]:checked,
+.qc-dropdown-list-checkbox input[type=radio]:checked, .qc-selection-button input[type=radio]:checked, .qc-check-row input[type=radio]:checked,
+.qc-dropdown-list-checkbox input[type=checkbox]:checked,
 .qc-selection-button input[type=checkbox]:checked,
 .qc-check-row input[type=checkbox]:checked {
   border-color: var(--qc-color-blue-regular);
 }
-.qc-selection-button input[type=radio]:disabled, .qc-check-row input[type=radio]:disabled,
+.qc-dropdown-list-checkbox input[type=radio]:disabled, .qc-selection-button input[type=radio]:disabled, .qc-check-row input[type=radio]:disabled,
+.qc-dropdown-list-checkbox input[type=checkbox]:disabled,
 .qc-selection-button input[type=checkbox]:disabled,
 .qc-check-row input[type=checkbox]:disabled {
   cursor: not-allowed;
   border-color: var(--qc-color-grey-light);
 }
-.qc-selection-button .qc-check-label, .qc-check-row .qc-check-label {
+.qc-dropdown-list-checkbox .qc-check-label, .qc-selection-button .qc-check-label, .qc-check-row .qc-check-label {
   font-size: var(--qc-font-size-md);
   line-height: var(--qc-line-height-md);
   font-weight: var(--qc-font-weight-regular);
@@ -2068,6 +2073,10 @@ qc-search-bar {
 .qc-check-row input[type=radio]:checked,
 .qc-check-row input[type=checkbox]:checked {
   border-color: var(--qc-color-blue-regular);
+}
+.qc-check-row input[type=radio].qc-compact,
+.qc-check-row input[type=checkbox].qc-compact {
+  margin-top: 0.4rem;
 }
 
 .qc-selection-button {
@@ -2129,7 +2138,6 @@ qc-search-bar {
   min-height: var(--qc-spacer-sm);
   max-width: var(--qc-spacer-sm);
   max-height: var(--qc-spacer-sm);
-  margin-top: 0.4rem;
   border-width: 1px;
 }
 
@@ -2308,6 +2316,14 @@ input[type=checkbox]:checked.qc-compact::after {
 }
 .checkbox-single.checkbox-single-invalid {
   box-shadow: 0.2rem 0 var(--qc-color-red-regular) inset;
+}
+
+.qc-dropdown-list-checkbox {
+  align-items: center;
+  flex-grow: 1;
+}
+.qc-dropdown-list-checkbox input[type=checkbox]:focus {
+  outline: none;
 }
 
 qc-textfield {
@@ -2684,6 +2700,7 @@ qc-textfield {
 }
 
 .qc-dropdown-list-multiple label {
+  margin: 0;
   padding-left: var(--qc-spacer-xs);
   padding-right: var(--qc-spacer-xs);
   flex-grow: 1;
